Correction on oss form, added 'prepend' hook on all widgets and updated translations for its use, updated province select preset liquid markup for better compilation

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -416,7 +416,7 @@ oss:
       schema:
         en: Name of the project activity
         fr: Nom de l'activité du projet.
-  description:
+  usedescription:
     title:
       en: The English and French description of the project activity.
       fr: La description du domaine de l'activité du projet en français et en anglais.
