--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -320,7 +320,7 @@ code:
       schema:
         en: Organization
         fr: Organisation
-  partner:
+  partners:
     title:
       en: Information about each group partnering on the project.
       fr: Renseignements sur chaque groupe partenaire du projet.
@@ -430,6 +430,13 @@ oss:
       schema:
         en: Description of the project activity
         fr: Description de l'activité du projet.
+  users:
+    title:
+      en: Project Users
+      fr: Utilisateurs tu projet
+    label:
+      en: Group using the project
+      fr: Les groupes qui utilisent le projet
   administrations: *administrations
   uses:
     title:
