--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -463,13 +463,13 @@ standards:
       schema:
         en: Specification URL
         fr: Url de la spécification
-  standardCode:
+  standardAcronym:
     title:
-      en: Code for the Standard
-      fr: Code du standard
+      en: Acronym for the Standard
+      fr: Acronyme du standard
     label:
-      en: Enter a code to create a new entry.
-      fr: Entrez un code pour créer une nouvelle entrée.
+      en: Enter a standard acronym to create a new entry.
+      fr: Entrez un acronyme du standard pour créer une nouvelle entrée.
     labels:
       select:
         en: If you wish to update an existing standard, please select it below
