Software updated w/ new DB

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -365,7 +365,7 @@ code:
       fr: Informations pour chaque projet ou code source publié.
 
 # Software form specifics
-oss:
+software:
   name:
     title:
       en: The English and French name of the project.
