--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -159,7 +159,7 @@ presets:
         en: The English and French URLs of licence.
         fr: L'URL de la licence en français et en anglais.
       spdxID:
-        en: SPDX License identifier
+        en: SPDX Licence identifier
         fr: Identifiant de licence SPDX
   orgLevel:
     title: &title
@@ -376,8 +376,8 @@ software:
       en: Informations about software users.
       fr: Information à propos des utilisateurs du logiciel
 
-# Standards form specifics
-standards:
+# Standard form specifics
+standard:
   name:
     title:
       en: Name of the Standard
