--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -33,18 +33,18 @@ nav:
       en: ./index.html
       fr: ./index.html
   code:
-    en: Open Source Code
-    fr: Code source ouvert
+    en: Open Source Codes
+    fr: Codes source ouverts
     link:
-      en: ./open-source-code.html
-      fr: ./code-source-ouvert.html
+      en: ./open-source-codes.html
+      fr: ./codes-source-ouverts.html
   software:
     en: Open Source Software
     fr: Logiciels libres
     link:
-      en: ./open-source-software.html
+      en: ./open-source-softwares.html
       fr: ./logiciels-libres.html
-  standards:
+  standard:
     en: Open Standards
     fr: Normes ouvertes
     link:
