--- a/_data/i18n/general.yml
+++ b/_data/i18n/general.yml
@@ -43,13 +43,13 @@ nav:
     fr: Logiciel libre
     link:
       en: ./open-source-software.html
-      fr: ./logiciels-libre.html
+      fr: ./logiciel-libre.html
   standard:
     en: Open Standard
     fr: Norme ouverte
     link:
       en: ./open-standard.html
-      fr: ./normes-ouverte.html
+      fr: ./norme-ouverte.html
   doc:
     en: Documentation
     fr: Documentation
