Language requested for OSC form: When a user a filling an english form, fields in english should be requested first, then french. And vice versa.

--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -270,7 +270,7 @@ presets:
     label:
       en:
         en: English tags
-        fr: Mots-clés anglais
+        fr: Mots-clés en anglais
       fr:
         en: French tags
         fr: Mots-clés en français
