--- a/_data/i18n/form.yml
+++ b/_data/i18n/form.yml
@@ -295,17 +295,14 @@ code:
       fr: Ajouter le nom du projet.
     label:
       en:
-        en: English name
-        fr: Nom en anglais
+        en: English name <h6><small>(100 characters limit)</small></h6>
+        fr: Nom en anglais <h6><small>(Limite de 100 caractères)</small></h6>
       fr:
-        en: French name
-        fr: Nom en français
+        en: French name <h6><small>(100 characters limit)</small></h6>
+        fr: Nom en français <h6><small>(Limite de 100 caractères)</small></h6>
       schema:
         en: Project Name
         fr: Nom du projet
-    limitCharacters:
-      en: (150 characters limit)
-      fr: (Limite de 150 caractères)
     labels:
       select:
         en: If you wish to update an already existing code, please select it below
